--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -84,3 +84,8 @@ a.no-underline:active,
 a.no-underline:focus {
 	text-decoration: none;
 }
+
+.vspace-20 {
+	display: inline-block;
+	height: 20px;
+}
