--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -267,6 +267,7 @@
 	float: left;
 	margin-right: 8px;
 	width: 14px;
+	min-height: 1px;
 }
 
 .navbar-label-privileged {
@@ -284,6 +285,10 @@
 
 .navbar-label-danger {
 	color: lightcoral;
+}
+
+.navbar-label-link {
+	color: #0d395f;
 }
 /* ReSharper restore Html.CssClassElementsNotFound */
 
@@ -1104,3 +1109,53 @@ table.analytics__user-answers {
 	margin-top: 10px;
 }
 
+/* Analytics dashboard */
+.form-control-date {
+	width: 100px;
+}
+
+.analytics__dashboard .slide-visits-count,
+.analytics__dashboard .quiz-average,
+.analytics__dashboard .exercise-tries,
+.analytics__dashboard .lesson-slide-no-stat,
+.analytics__dashboard .stat-title,
+.analytics__dashboard .small-table__right-cell
+ {
+    width: 50px;
+    display: inline-block;
+    text-align: right;
+}
+
+.analytics__dashboard .small-table__title {
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding: 0 0 2px;
+	margin-bottom: 3px;
+}
+
+.analytics__dashboard .small-table__title__cell
+{
+	display: inline-block;
+	color: #ccc;
+	font-size: 8pt;
+	text-align: right;
+	width: 50px;
+}
+
+.analytics__dashboard .student-progress {
+	display: inline-block;
+	width: 150px;
+	height: 10px;
+	border-radius: 0;
+	box-shadow: none;
+	margin-bottom: 0;
+}
+
+.analytics__dashboard .large-number {
+    text-align: center;
+    font-size: 40pt;
+}
+
+.analytics__dashboard .large-number__text {
+	text-align: center;
+}
