--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model != null)
 {
-	<li><a href="@Url.RouteUrl("Course.Slide", new { Model.CourseId })">@Model.CourseTitle</a></li>
+	<li><a href="@Url.RouteUrl("Course.Slide", new { Model.CourseId })">@Model.CourseTitle.TruncateWithEllipsis(40)</a></li>
 	<li class="dropdown">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span></a>
 		<ul class="dropdown-menu">
