Updates to analytics dashboard:
1. Show highcharts
2. Filter users by group
3. Show average success percent instead of average score for quizzes

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1159,3 +1159,24 @@ table.analytics__user-answers {
 .analytics__dashboard .large-number__text {
 	text-align: center;
 }
+
+.analytics__chart__toggles {
+	font-size: 10pt;
+}
+
+.analytics__chart__toggles .analytics__chart__toggle {
+	margin-right: 10px;
+}
+
+.analytics__chart__toggles .analytics__chart__toggle.selected {
+	pointer-events: none;
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.analytics__chart__toggles .analytics__chart__toggle.selected:hover,
+.analytics__chart__toggles .analytics__chart__toggle.selected:focus,
+.analytics__chart__toggles .analytics__chart__toggle.selected:active {
+	text-decoration: none;
+}
