--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -87,7 +87,7 @@
 	{
 		<h4>Оцените от 0 до @block.MaxScore</h4>
 		<div>
-			<input type="number" class="form-control" min="0" max="@block.MaxScore" name="quiz__score__@block.Id" />
+			<input type="number" class="form-control" min="0" max="@block.MaxScore" name="quiz__score__@(block.Id)" />
 		</div>
 	}
 
