--- a/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualExerciseCheckingQueue.cshtml
@@ -1,13 +1,13 @@
-﻿@model uLearn.Web.Controllers.ManualQuizCheckQueueViewModel
+﻿@model uLearn.Web.Controllers.ManualCheckingQueueViewModel
 
 @{
-	ViewBag.Title = "Очередь на проверку";
+	ViewBag.Title = "Очередь на код ревью";
 }
 
 <div class="container">
-	<h1>Очередь на проверку</h1>
+	<h1>Очередь на код ревью</h1>
 
-	@if (! string.IsNullOrEmpty(Model.Message) && Model.Checks.Count > 0)
+	@if (! string.IsNullOrEmpty(Model.Message) && Model.Checkings.Count > 0)
 	{
 		<div class="alert alert-danger">
 			@if (Model.Message == "already_checked")
@@ -29,15 +29,15 @@
 		</div>
 	}
 
-	@if (Model.Checks.Count == 0)
+	@if (Model.Checkings.Count == 0)
 	{
 		<div class="alert alert-success">Поздравляем, очередь пуста! Работ для проверки нет</div>
-		<div class="text-muted">Здесь будут появляться ответы студентов на тесты, которые должны быть проверены инструктором вручную.</div>
+		<div class="text-muted">Здесь будут появляться программы студентов, которые должны быть проверены инструктором вручную.</div>
 	}
 
-	@foreach (var checkModel in Model.Checks)
+	@foreach (var checkModel in Model.Checkings)
 	{
-		var check = checkModel.QuizCheckQueueItem;
+		var check = checkModel.CheckingQueueItem;
 		<div>
 			<div>
 				@check.User.VisibleName заполнил тест «@checkModel.ContextSlideTitle»
@@ -60,12 +60,12 @@
 					</p>
 					if (check.IsLockedBy(User.Identity))
 					{
-						@Html.ActionLink("Вернуться к проверке →", "CheckQuiz", new { id = check.Id }, new { @class = "btn btn-sm btn-primary" })
+						@Html.ActionLink("Вернуться к проверке →", "CheckExercise", new { id = check.Id }, new { @class = "btn btn-sm btn-primary" })
 					}
 				}
 				else
 				{
-					@Html.ActionLink("Перейти к проверке →", "CheckQuiz", new { id = check.Id }, new { @class = "btn btn-sm btn-success" })
+					@Html.ActionLink("Перейти к проверке →", "CheckExercise", new { id = check.Id }, new { @class = "btn btn-sm btn-success" })
 				}
 			</div>
 			<hr/>
