--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -83,7 +83,7 @@
 	</h4>
 
 	@QuizBlock((dynamic)block, context)
-	if (context.ManualQuizCheckQueueItem != null)
+	if (context.ManualChecking != null)
 	{
 		<h4>Оцените от 0 до @block.MaxScore</h4>
 		<div>
@@ -165,6 +165,10 @@
 	ExerciseBlockData data = context.GetBlockData(block) ?? new ExerciseBlockData();
 	var action = data.CanSkip ? "$('#ShowSolutionsAlert').modal('show')" : string.Format("window.location='{0}'", data.AcceptedSolutionUrl);
 	var classString = context.IsGuest ? "code-guest" : "code-exercise";
+	if (context.ManualChecking != null)
+	{
+		classString = "code-review";
+	}
 	<textarea id="secretCodeExercise" class="hide">@block.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
 	<textarea class="code @classString" data-lang="@block.LangId">@(data.LatestAcceptedSolution ?? block.ExerciseInitialCode.EnsureEnoughLines(4))</textarea>
 	<script type="text/javascript">
@@ -173,7 +177,7 @@
 			$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
 		}
 	</script>
-	if (data.ShowControls)
+	if (data.ShowControls && context.ManualChecking == null)
 	{
 		<div class="solution-control btn-group ctrl-group">
 			<button type="button" class="run-solution-button btn btn-primary no-rounds @(data.IsLti ? "run-solution-button-lti" : "")" data-url="@data.RunSolutionUrl">
@@ -224,6 +228,21 @@
 			</ol>
 			<h3>Комментарий после решения</h3>
 			<p>@block.CommentAfterExerciseIsSolved</p>
+		</div>
+}
+
+	if (context.ManualChecking != null)
+	{
+		//<div class="exercise__add-review" style="display: none" data-url="@(new UrlHelper().Action("AddExerciseCodeReview", "Exercise", new { courseId = context.Course.Id }))">
+		<div class="exercise__add-review" style="display: none" data-url="/Exercise/AddExerciseCodeReview?courseId=@context.Course.Id&amp;checkingId=@context.ManualChecking.Id">
+			<div>Добавить комментарий</div>
+			<textarea class="exercise__add-review__comment"></textarea>
+			<button class="exercise__add-review__button btn btn-success btn-sm">Сохранить</button>
+		</div>
+
+		<h4>Оцените от 0 до @block.MaxReviewScore</h4>
+		<div>
+			<input type="number" class="form-control" min="0" max="@block.MaxReviewScore" name="exercise__score" />
 		</div>
 	}
 }
