Hide Accepted Solutions button

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -187,7 +187,7 @@
 						data-url="@data.GetHintUrl">
 					Get hint
 				</button>
-				if (!data.IsLti)
+				if (!data.IsLti && !block.HideShowSolutionsButton)
 				{
 					<button type="button" class="btn btn-default giveup-btn" onclick="@action">
 						Show solutions
