--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -24,7 +24,7 @@
 			}
 			@if (Model.Message == "time_is_over")
 			{
-				<p>Время проверки работы вышло. Выберите другую</p>
+				<p>Время проверки вышло. Выберите другую работу</p>
 			}
 		</div>
 	}
