--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -29,7 +29,7 @@
 
 	if (! string.IsNullOrEmpty(status))
 	{
-		<p id="quiz-status">@status</p>
+		<p class="quiz-status">@status</p>
 	}
 	if (! string.IsNullOrEmpty(Request.QueryString["error"]))
 	{
