--- a/src/uLearn.Web/Views/Course/AcceptedAlert.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedAlert.cshtml
@@ -22,7 +22,7 @@
 			{
 				<h4 class="modal-title">Внимание</h4>
 				<p class="modal-body">Вы потеряете возможность получить баллы за эту задачу, если продолжите.</p>
-				<a class="btn btn-default" href="@Model.AcceptedSolutionUrl">Продолжить</a>
+				<a class="btn btn-default" href="@Model.Url.Action("AcceptedSolutions", "Course", new { Model.CourseId, Model.SlideIndex, isLti = true }),">Продолжить</a>
 			}
 		</div>
 	</body>
