--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -16,6 +16,10 @@
 		<div class="row">
 			<div class='slide'>
 				<h1>@Model.Slide.Title <span class="score">@GetScore(Model.Score)</span></h1>
+				@if (!string.IsNullOrEmpty(Model.Error))
+				{
+					<p class="alert alert-danger">@Model.Error</p>
+				}
 				@if (Model.Slide is QuizSlide)
 				{
 					@Html.Action("Quiz", "Quiz", new
@@ -24,11 +28,19 @@
 						   courseId = Model.CourseId,
 						   userId = Model.UserId,
 						   isGuest = Model.IsGuest,
-						   manualQuizCheckQueueItem = (ManualQuizChecking) Model.BlockRenderContext.ManualChecking
+						   manualQuizCheckQueueItem = (ManualQuizChecking) Model.ManualChecking
 					   })
 				}
 				else
 				{
+					if (Model.ManualChecking != null)
+					{
+						<p class="exercise-status">
+							@Model.ManualChecking.User.VisibleName
+							(@Model.ContextManualCheckingUserGroups),
+							@Model.ManualChecking.Timestamp.ToPrettyString()
+						</p>
+					}
 					@SlideHtml.Blocks(Model.BlockRenderContext)
 				}
 
