Show information about code review to student just right after success running

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -147,6 +147,13 @@
 	margin-top: 10px;
 }
 
+.run-review-status {
+	color: white;
+    text-align: center;
+    font-size: 13pt;
+    padding: 2px 0;
+}
+
 .no-rounds {
 	-ms-border-radius: 0;
 	-webkit-border-radius: 0;
